tests/fixtures/invalid/duplicate_task.pi
# Error: Tarea duplicada
project test

task analyze
   goal analyze data

task analyze
   goal analyze again
